latte/tests/bad/type/expr/eq.lat
void f() {}
void g() {}

int main() {
  boolean b = f == g;
  return 0;
}
